<resources>
    <string name="app_name">Social Media Weeduu Tablet</string>
    <string name="facebook_app_id">1253872251369339</string>
    <string name="directory_images_name">SocialMedia</string>
    <string name="image_name">pic</string>
    <string name="saved">Guardado</string>
    <string name="configuration_change">Cofiguración cambiada</string>
    <string name="permission_deny">¡Lo sentimos!, no puede usar esta parte de la aplicacion sin aceptar los permisos</string>
    <string name="count_down">Cuenta atras</string>
    <string name="email">Email:</string>
    <string name="terminos_inicio_frase">Acepta los</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="compartir">Compartir</string>
    <string name="z_lorem_ipsum_10pa">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sem arcu, egestas eu imperdiet ac, iaculis eget libero. Pellentesque interdum venenatis felis sit amet facilisis. Aliquam sit amet lobortis odio, at consectetur elit. Suspendisse ut nulla nec ipsum fermentum auctor sit amet eget turpis. In blandit tempor est at dapibus. Sed posuere et ligula nec hendrerit. Aliquam sollicitudin, tortor ac sagittis tincidunt, quam velit pulvinar velit, ut eleifend nunc mauris vel justo. Cras vel scelerisque metus, et placerat libero.  In molestie massa quis neque ullamcorper, ultrices pharetra leo iaculis. Integer gravida sagittis lectus sit amet commodo. Vivamus laoreet risus semper efficitur interdum. Quisque id metus nec metus commodo ultricies. Phasellus sapien magna, commodo vel aliquet sed, tincidunt ornare diam. Aenean ultricies, lectus eu faucibus facilisis, diam ligula imperdiet massa, ut maximus massa velit eu massa. Quisque tincidunt efficitur suscipit. Vestibulum quam nunc, placerat quis felis eu, interdum dictum augue. Maecenas a lacus tincidunt, sagittis diam id, eleifend diam. Donec mattis sagittis felis, at faucibus est. Vestibulum bibendum iaculis ullamcorper. Praesent maximus ante sed sapien tempor venenatis.  Aenean lorem erat, ultrices sit amet faucibus non, malesuada eu mauris. Vestibulum vel rutrum purus. Curabitur finibus mollis leo, at faucibus neque viverra quis. Suspendisse potenti. Proin pharetra consectetur erat, non fringilla leo euismod nec. Praesent varius mi massa, vel aliquam lorem rutrum quis. Praesent ante leo, aliquet non diam sed, condimentum scelerisque odio. Aliquam eget leo sit amet eros efficitur commodo. Mauris tincidunt elit eu ligula bibendum pharetra. Mauris vitae tempus felis, nec sagittis nulla. Praesent rutrum urna leo, eget sollicitudin arcu blandit a.  Aliquam ac mauris sit amet nisl consectetur pharetra ut quis sem. Quisque scelerisque mauris id commodo aliquet. Donec blandit viverra purus, eu pretium quam fringilla in. Aliquam consequat libero ac pulvinar tristique. Curabitur eget ex non ligula maximus lacinia. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus vestibulum lectus id dolor luctus, ut condimentum risus pharetra. Aliquam id justo mauris. Nam maximus a leo nec ultrices. Duis congue aliquam lectus non ultrices. Maecenas ac ex eget ex auctor laoreet aliquam convallis diam. Fusce magna ligula, accumsan eget tristique ut, placerat eu odio. Aliquam faucibus a tortor eu dictum. Proin euismod arcu quis justo rutrum, sed volutpat risus auctor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc feugiat cursus ex dignissim venenatis.  Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam at nibh sapien. Pellentesque in felis at leo suscipit commodo eu nec ligula. Etiam at tempus ante. Maecenas sagittis tortor a nibh dapibus, sit amet hendrerit tortor porttitor. Suspendisse potenti. Donec porta dapibus nisi, consequat lacinia nunc congue vitae.  Proin mauris ex, facilisis nec sodales ut, porta non odio. Donec luctus id ligula ut ullamcorper. Cras commodo pulvinar mauris, id varius erat auctor tincidunt. Donec scelerisque nulla sit amet erat eleifend interdum. Morbi eget erat volutpat, egestas sem vel, porta enim. Quisque commodo iaculis turpis in tempus. In varius enim quis lorem ullamcorper varius. Proin congue quis erat et gravida.  Nulla mauris mauris, fermentum a ligula ut, luctus ullamcorper leo. Donec in lacus sit amet felis venenatis finibus vitae lobortis ipsum. Maecenas et risus non diam efficitur dictum. Aenean in mauris porttitor, tincidunt mauris ac, volutpat est. Etiam leo ex, hendrerit sed nisl eget, varius rhoncus enim. Suspendisse mauris magna, semper eget elit et, laoreet feugiat enim. Nunc ac ligula interdum, efficitur diam interdum, pellentesque mi. Sed dapibus, mi eget hendrerit volutpat, eros tortor consectetur lorem, vitae condimentum quam tellus eu lacus. Praesent tempus lectus nulla, et malesuada leo interdum non. Sed libero elit, facilisis et sem sed, bibendum congue justo. Morbi neque nibh, volutpat quis gravida ut, porttitor nec justo. In porta vitae sem eu vulputate. Morbi in urna sem.  Proin semper tellus sed nibh cursus, et convallis dolor iaculis. Donec rutrum convallis enim, sed tempor nisi rhoncus non. Nam viverra ac neque at venenatis. Sed in metus est. Vestibulum porttitor posuere pulvinar. Nullam dictum enim augue, eget ultricies neque consectetur vel. Morbi interdum sem at finibus mattis. Ut sit amet ex a sapien placerat sagittis id malesuada sapien. Phasellus ut sapien mi. Fusce molestie nisl eu eleifend convallis.  Donec velit risus, laoreet nec nibh ut, ultricies finibus sapien. Nullam ex sapien, accumsan non pretium nec, lobortis at ipsum. Nullam quis commodo purus, sit amet convallis nisl. Sed sagittis nibh sed ligula rhoncus rhoncus. Vestibulum porttitor velit et massa ullamcorper dapibus. Nulla in mollis ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec venenatis dolor quis erat bibendum, non dapibus augue mattis. Nunc mattis tellus nisl, a ultrices mauris vulputate sit amet.  Nullam et tincidunt felis. Aliquam fringilla tincidunt luctus. Mauris ornare elit justo, vel hendrerit sem varius sed. Vivamus odio sapien, volutpat sed nisl in, scelerisque viverra orci. Morbi imperdiet fermentum justo et ultricies. Mauris ac dapibus libero, vel euismod odio. Donec at tempor tortor, in venenatis velit. Nullam iaculis nisi ligula, ac vestibulum neque vestibulum at. Aenean euismod arcu a felis facilisis, non volutpat urna commodo. Vestibulum tristique ullamcorper pellentesque. Vestibulum rhoncus non ante non vulputate. Morbi eros metus, scelerisque tincidunt interdum ac, blandit vitae mi. Etiam laoreet odio euismod nunc hendrerit, finibus dictum quam feugiat.</string>
    <string name="repetir">Repetir</string>
    <string name="texto_sobre_preview">¿Te gusta como ha quedado?</string>
    <string name="terminos_condiciones">Terminos y condiciones</string>
    <string name="texto_compartir">Para compartir tiene:</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="como_funciona">Como Funciona</string>
    <string name="text_info_email">Si quiere recibir un correo para compartir en su perfil ponga aqui su dirección de correo</string>
    <string name="text_terminos_rechazados">Tiene que aceptar los terminos y condiciones</string>
    <string name="no_hay_red">No hay conexion a ninguna red</string>
    <string name="no_hay_conexion_internet">Su red no tiene conexion a internet</string>
</resources>
