<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_azul_peque"

    tools:context="com.carrillo.jesus.socialmediaweeduutablet.PreviewActivity">

    <Button
        android:text="@string/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAceptarPreview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="92dp" />

    <Button
        android:text="@string/repetir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRepetir"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancelar"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/buttonRepetir"
        android:layout_marginStart="57dp" />


    <TextView
        android:text="@string/texto_sobre_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textoSobrePrimary"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/buttonAceptarPreview"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/imageViewPreview"
        android:layout_height="195dp"
        android:layout_width="match_parent"
        android:layout_weight="0.37"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonAceptarPreview" />


</RelativeLayout>
