<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_compartir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.carrillo.jesus.socialmediaweeduutablet.CompartirActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textViewParaCompartir"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_info_details"
            android:id="@+id/imageViewInfoEmail"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:id="@+id/checkBoxTerminosYCondiciones"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/textView3"
            android:layout_weight="1" />

        <TextView
            android:text="@string/terminos_inicio_frase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_alignBaseline="@+id/checkBoxTerminosYCondiciones"
            android:layout_alignBottom="@+id/checkBoxTerminosYCondiciones"
            android:layout_centerHorizontal="true"
            android:layout_weight="1" />

        <TextView
            android:text="@string/terminos_condiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_alignTop="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:id="@+id/textViewTerminosYCondiciones"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="@string/texto_compartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textViewParaCompartir"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="56dp" />

    <Button
        android:text="@string/compartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCompartir"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="16dp" />

    <Button
        android:text="@string/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonCompartir"
        android:layout_toEndOf="@+id/buttonCompartir"
        android:layout_marginStart="17dp"
        android:id="@+id/buttonCancelarCompartir" />


</RelativeLayout>
