<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="224dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z_lorem_ipsum_10pa"
                    android:id="@+id/textView" />
            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAceptarTerminos"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonCancelarTerminos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>